# mimir

./: .gitignore  compose.yaml
services/adminapi/: Cargo.toml
services/adminapi/src/: main.rs
services/embeddings/: Dockerfile  app.py  test.ipynb
services/searchapi/: Cargo.toml
services/searchapi/src/: main.rs
