[package]
name = "adminapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
derive_more = "0.99.17"
qdrant-client = "1.8.0"
serde = { version = "1.0.197", features = ["derive"] }
